@@ -1,5 +1,16 @@
 2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	Fix build for Visual Studio on Windows.
+
+	* datrie/dstring.c (dstring_append, dstring_append_string,
+	  dstring_append_char, dstring_terminate):
+	  - Cast (void *) pointers to (char *) before calculating offsets,
+	    for portability.
+
+	Thanks Mikhail Korobov <kmike84@gmail.com> for the report.
+
+2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	Check for doxygen required version.
 
 	* configure.ac:
